added chat route
